...
        body: Padding(
          padding: EdgeInsets.symmetric(horizontal: 15.w, vertical: 10.h),
          child: Column(
            children: [
              /// Search Field
              CustomField(
                key: Key("customField"),
                controller: controller.searchController,
                onChanged: controller.onQueryChanged,

                hint: "Search GitHub user...",
                fillColor: Colors.white,
                prefixIcon: Padding(
...
                    size: 18.sp, // responsive icon
                  ),
                ),
                borderRadius: 16.r, // responsive radius
                suffixIcon: IconButton(
                  icon: FaIcon(
                    key: Key("clearIcon"),
                    FontAwesomeIcons.xmark,
                    color: Colors.grey,
                    size: 18.sp,
                  ),
                  onPressed: controller.clear,
                ),
...
